--- a/CECS 378/Lab 1 - Symmetric Cryptography/.vscode/settings.json
+++ b/CECS 378/Lab 1 - Symmetric Cryptography/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.pythonPath": "/opt/anaconda3/bin/python"
+    "python.pythonPath": "/usr/bin/python3",
+    "files.exclude": {
+        "**/.classpath": true,
+        "**/.project": true,
+        "**/.settings": true,
+        "**/.factorypath": true
+    }
 }
